src/test/ui/borrowck/borrowck-issue-14498.ast.stderr
error[E0389]: cannot assign to data in a `&` reference
  --> $DIR/borrowck-issue-14498.rs:19:5
   |
LL |     ***p = 2;
   |     ^^^^^^^^ assignment into an immutable reference

error[E0506]: cannot assign to `**y` because it is borrowed
  --> $DIR/borrowck-issue-14498.rs:29:5
   |
LL |     let p = &y;
   |              - borrow of `**y` occurs here
LL |     let q = &***p;
LL |     **y = 2;
   |     ^^^^^^^ assignment to borrowed `**y` occurs here

error[E0506]: cannot assign to `**y` because it is borrowed
  --> $DIR/borrowck-issue-14498.rs:40:5
   |
LL |     let p = &y;
   |              - borrow of `**y` occurs here
LL |     let q = &***p;
LL |     **y = 2;
   |     ^^^^^^^ assignment to borrowed `**y` occurs here

error[E0506]: cannot assign to `**y` because it is borrowed
  --> $DIR/borrowck-issue-14498.rs:51:5
   |
LL |     let p = &y;
   |              - borrow of `**y` occurs here
LL |     let q = &***p;
LL |     **y = 2;
   |     ^^^^^^^ assignment to borrowed `**y` occurs here

error[E0506]: cannot assign to `**y` because it is borrowed
  --> $DIR/borrowck-issue-14498.rs:62:5
   |
LL |     let p = &y;
   |              - borrow of `**y` occurs here
LL |     let q = &***p;
LL |     **y = 2;
   |     ^^^^^^^ assignment to borrowed `**y` occurs here

error[E0506]: cannot assign to `**y.a` because it is borrowed
  --> $DIR/borrowck-issue-14498.rs:73:5
   |
LL |     let p = &y.a;
   |              --- borrow of `**y.a` occurs here
LL |     let q = &***p;
LL |     **y.a = 2;
   |     ^^^^^^^^^ assignment to borrowed `**y.a` occurs here

error[E0506]: cannot assign to `**y.a` because it is borrowed
  --> $DIR/borrowck-issue-14498.rs:84:5
   |
LL |     let p = &y.a;
   |              --- borrow of `**y.a` occurs here
LL |     let q = &***p;
LL |     **y.a = 2;
   |     ^^^^^^^^^ assignment to borrowed `**y.a` occurs here

error[E0506]: cannot assign to `**y.a` because it is borrowed
  --> $DIR/borrowck-issue-14498.rs:95:5
   |
LL |     let p = &y.a;
   |              --- borrow of `**y.a` occurs here
LL |     let q = &***p;
LL |     **y.a = 2;
   |     ^^^^^^^^^ assignment to borrowed `**y.a` occurs here

error[E0506]: cannot assign to `**y.a` because it is borrowed
  --> $DIR/borrowck-issue-14498.rs:106:5
   |
LL |     let p = &y.a;
   |              --- borrow of `**y.a` occurs here
LL |     let q = &***p;
LL |     **y.a = 2;
   |     ^^^^^^^^^ assignment to borrowed `**y.a` occurs here

error: aborting due to 9 previous errors

Some errors occurred: E0389, E0506.
For more information about an error, try `rustc --explain E0389`.
